--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "api",
+  "name": "socialifeapi",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
