--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-  "type": "module",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "build": "tsc && cp .env dist/"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,11 @@
   "homepage": "https://github.com/shetty-nithin/socialife_backend#readme",
   "dependencies": {
     "@tanstack/react-query": "^4.28.0",
+    "@types/bcryptjs": "^2.4.5",
+    "@types/cookie-parser": "^1.4.5",
+    "@types/cors": "^2.8.15",
+    "@types/express": "^4.17.20",
+    "@types/mysql": "^2.15.23",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
@@ -30,5 +35,9 @@
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.21"
+  },
+  "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.4",
+    "typescript": "^5.2.2"
   }
 }
